--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "stylelint": "stylelint \"src/**/*.{css,scss,sass}\""
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-next": "13.4.13",
-    "lucide-react": "^0.265.0",
+    "lucide-react": "0.263.1",
     "next": "13.4.13",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
